--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -15,24 +15,53 @@
   background: linear-gradient(to right, #009f00, #00e300);
 }
 
-
 .snapguidist__test--fail {
   background: linear-gradient(to right, #ff3d3d, #ffaeae);
   height: 25px;
 }
 
+.snapguidist__test--expanded {
+  height: auto;
+}
+
 .snapguidist__button {
-  background-color: #000;
+  background-color: #fff;
   border: 0;
-  color: #fff;
+  color: #333;
   cursor: pointer;
-  font-size: 10px;
+  font-size: 11px;
   margin-right: 4px;
   outline: none;
   text-transform: uppercase;
-  transition: opacity;
+  transition: opacity 0.1s;
 }
 
 .snapguidist__button:disabled {
   opacity: 0.5;
+}
+
+.snapguidist__arrow {
+  display: inline-block;
+  transition: transform 0.1s;
+}
+
+.snapguidist__arrow--expanded {
+  transform: rotate(-180deg);
+}
+
+.snapguidist__label {
+  color: #333;
+  display: inline-block;
+  font-size: 11px;
+  margin-top: 4px;
+  text-transform: uppercase;
+}
+
+.snapguidist__code {
+  background-color: #333;
+  border-radius: 3px;
+  color: #fff;
+  display: block;
+  font-size: 12px;
+  padding: 4px;
 }
