--- a/src/styles.css
+++ b/src/styles.css
@@ -3,21 +3,24 @@
 }
 
 .snapguidist__test {
-  background: linear-gradient(to right, #888888, #c3c3c3);
+  background: #ffaeae;
+  /* background: linear-gradient(to right, #888888, #c3c3c3); */
   box-sizing: border-box;
   height: 0px;
   margin: 15px -15px -15px;
   overflow: hidden;
   padding: 2px 4px 4px;
-  transition: height 0.1s ease-out;
+  transition: height .3s ease-out, background .5s ease;
 }
 
 .snapguidist__test--pass {
-  background: linear-gradient(to right, #009f00, #00e300);
+  background: #aeffae;
+  /* background: linear-gradient(to right, #009f00, #00e300); */
 }
 
 .snapguidist__test--fail {
-  background: linear-gradient(to right, #ff3d3d, #ffaeae);
+  background: #ffaeae;
+  /* background: linear-gradient(to right, #ff3d3d, #ffaeae); */
   height: 25px;
 }
 
@@ -26,11 +29,12 @@
 }
 
 .snapguidist__button {
-  background-color: #333;
+  background-color: rgba(0, 0, 0, .6);
   border: 0;
-  color: #fff;
+  color: rgba(255, 255, 255, 9);
   cursor: pointer;
   font-size: 11px;
+  border-radius: 2px;
   margin-right: 4px;
   outline: none;
   text-transform: uppercase;
