--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 }
 
 .snapguidist__test {
-  background: #ffaeae;
+  background: #aeaeae;
   /* background: linear-gradient(to right, #888888, #c3c3c3); */
   box-sizing: border-box;
   height: 0px;
